feat/reservations: add all user reservations handler
